fix: update sidebar component structure and adjust scrollbar styles

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -121,7 +121,7 @@
 }
 
 :root {
-  --radius: 0;
+  --radius: 0.625rem;
   --background: oklch(1 0 0);
   --foreground: oklch(0.141 0.005 285.823);
   --card: oklch(1 0 0);
@@ -191,4 +191,26 @@
   --sidebar-ring: oklch(0.405 0.101 131.063);
 
   color-scheme: dark;
+}
+
+::-webkit-scrollbar {
+  --scrollbar-width: 14px;
+  width: var(--scrollbar-width);
+  height: var(--scrollbar-width);
+}
+
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: var(--color-muted-foreground);
+  border: 5px solid transparent;
+  background-clip: padding-box;
+  border-radius: 9999px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: var(--color-accent-foreground);
+  border-width: 4px;
 }
